# mineru-lite-cli

./: README.md  main.py  pyproject.toml
src/mineru_lite/: __init__.py  blocks.py  cache.py  cli.py  config.py  converter.py  main.py  markdown.py  model.py  pdf_utils.py  tables.py  vlm_client.py
